Fix horizontal scroll

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -9,7 +9,7 @@
     @media (min-width: 1366px) {
       margin-left: auto;
       margin-right: auto;
-      width: 1366px;
+      max-width: 1366px;
     }
   }
 
